--- a/Project 3.html
+++ b/Project 3.html
@@ -59,7 +59,7 @@
 
     <section id="project-details">
         <div class="container">  
-            <img src="images/open.png" alt="Project 3 Image">
+            <img src="https://github.com/otoolinda/Lyndee-s-consult/blob/main/open.png" alt="Project 3 Image">
             <p><strong>Abstract</strong></p> 
             <p><strong>Considering a PV system with specified rated power, a battery storage is analysed and designed to store power generated from irradiance. This power is supplied to a demand from customers. In other to achieve maximum power at the highest voltage and current at all times, MPPT is implemented to ensure this condition is met. Furthermore, the boost converter is connected between power generation and load to supply the load at the correct voltage level. </strong></p> 
         </div>      
